gap fixed

--- a/css/style.css
+++ b/css/style.css
@@ -167,7 +167,7 @@ hr {
 
 .course-container {
   display: flex; /* Side-by-side columns */
-  gap: 30px;
+  gap: 40px;
   margin-top: 10px;
 }
 
